@@ -103,6 +103,7 @@ kotex-utils/jamo-normalize.pl
 kotex-utils/komkindex.pl
 kotex-utils/ttf2kotexfont.pl
 l3build/l3build.lua
+l3sys-query/l3sys-query.lua
 latex-git-log/latex-git-log
 latex-papersize/latex-papersize.py
 latex2man/latex2man
