@@ -1,3 +1,8 @@
+2024-03-17  Karl Berry  <karl@tug.org>
+
+	* texmf.cnf (shell_escape_commands): add l3sys-query
+	after analysis on tex-live. https://ctan.org/pkg/l3sys-query
+
 2024-03-10  Karl Berry  <karl@tug.org>
 
 	* TL'24 release.
